// Copyright (c) 2018-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.
syntax = "proto3";

package magma;
option go_package = "test_protos";


message Config1 {
    string field = 1;
}

message Config2 {
    string field1 = 1;
    string field2 = 2;
}
